# slopos

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMDS.md  COMMUNICATION.md  FRAMEBUFFER_ISSUE.md  GUIDANCE.md  Makefile  TODO.md  limine.cfg  link.ld  meson.build  meson_options.txt  metal.ini
.claude/agents/: build-system-manager.md  build-test-debug-agent.md  kernel-architect.md  kernel-scheduler-manager.md  memory-system-architect.md  video-pipeline-architect.md
boot/: boot_complete.s  boot_simple.s  constants.h  cpu_verify.c  debug.c  debug.h  early_init.c  entry32.s  entry64.s  gdt.c  gdt.h  gdt_setup.s  idt.c  idt.h  idt_handlers.s  init.h  integration.h  kernel_panic.c  limine_entry.s  limine_protocol.c  limine_protocol.h  log.c  log.h  multiboot2_header.s  safe_stack.c  safe_stack.h  shutdown.c  shutdown.h
boot_fat/: grub.cfg
boot_fat/boot/: kernel.elf
drivers/: apic.c  apic.h  exception_handlers.c  exceptions.s  idt.c  idt.h  interrupt_test.c  interrupt_test.h  interrupt_test_config.c  interrupt_test_config.h  irq.c  irq.h  keyboard.c  keyboard.h  pci.c  pci.h  pic.c  pic.h  pit.c  pit.h  serial.c  serial.h  tty.c  tty.h
fs/: fileio.c  fileio.h  ramfs.c  ramfs.h  test_ramfs.c
iso/boot/: kernel.elf
iso/boot/grub/: grub.cfg
lib/: memory.c  memory.h  stacktrace.c  stacktrace.h  string.c  string.h  unit_test.c  unit_test.h
mm/: buddy_alloc.c  early_paging.c  kernel_heap.c  kernel_heap.h  mb2_parser.c  memory_init.c  memory_layout.c  memory_layout.h  memory_reservations.c  memory_reservations.h  multiboot2.c  page_alloc.c  page_alloc.h  paging.c  paging.h  phys_virt.c  phys_virt.h  process_vm.c  test_kernel_heap.c  test_process_vm.c  uefi_memory.c  vmem_regions.c
sched/: README.md  context_switch.s  draw_task.c  draw_task.h  kthread.c  kthread.h  scheduler.c  scheduler.h  task.c  task.h  test_tasks.c
scripts/: build_iso.sh  create_bootable_fat.sh  run_qemu_ovmf.sh  run_qemu_ovmf_video.sh  run_slopos.sh  setup_ovmf.sh
shell/: builtins.c  builtins.h  shell.c  shell.h
task/: 01_keyboard_scancode_translation.md  02_keyboard_input_buffer.md  03_terminal_input_readline.md  04_shell_main_loop.md  05_command_parser.md  06_builtin_commands.md  07_ramdisk_filesystem.md  08_file_io_api.md  09_shell_ramdisk_integration.md
tasks/: 01-context-switch.md  02-process-vm-slot-reuse.md  03-user-paging-path.md  04-framebuffer-mapping.md  05-kernel-heap-fragmentation.md  P1-boot-init-refactor.md  P2-scheduler-cohesion.md  P3-tty-yielding-io.md  P4-timer-preemption.md  P5-device-memory-reservation.md  README.md  priority-1-contiguous-page-allocation.md  priority-1-exception-handler-refactor.md  priority-2-interrupt-test-harness.md  priority-2-safe-stack-management.md  priority-3-complete-test-framework.md  priority-3-irq-dispatch.md  priority-4-scheduler-cleanup.md  priority-4-test-configuration-integration.md  priority-5-exception-recovery-state-management.md  priority-6-interrupt-test-harness.md  priority-7-irq-dispatch.md  priority-8-scheduler-cleanup.md  task-allocator-scale.md  task-cleanup-scheduler-debug.md  task-phys-virt-mapping.md  task-process-heap-mapping.md  task-zeroing-support.md
video/: font.c  font.h  framebuffer.c  framebuffer.h  graphics.c  graphics.h  splash.c  splash.h
