option('interrupt_tests_default',
       type : 'boolean',
       value : false,
       description : 'Run interrupt test harness during boot by default')

option('interrupt_tests_default_suite',
       type : 'combo',
       choices : ['all', 'basic', 'memory', 'control'],
       value : 'all',
       description : 'Interrupt test suite to execute when enabled by default')

option('interrupt_tests_default_timeout',
       type : 'integer',
       min : 0,
       value : 500,
       description : 'Timeout in milliseconds for interrupt tests during boot (0 disables timeouts)')

option('interrupt_tests_default_verbosity',
       type : 'combo',
       choices : ['quiet', 'summary', 'verbose'],
       value : 'summary',
       description : 'Default verbosity for interrupt test logging')
